2001-11-05  Akim Demaille  <akim@epita.fr>

	* automake.in (@common_sometimes, &handle_configure): No longer
	use stamp-hin.
	* lib/am/remake-hdr.am: Adjust.
	* tests/confh.test: There is no stamp.hin.

2001-11-01  Akim Demaille  <akim@epita.fr>

	* lib/am/lex.am, lib/am/yacc.am: Use the output file name in
	`#line' and multiple inclusion guards.
	* lib/ylwrap: Remove debugging code.
	(input_dir, input_rx): Move where used.
	Use the output file name in `#line'.

2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* automake.in (transform): Update documentation.

2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>

	* m4/gcj.m4 (AM_PROG_GCJ): Define GCJFLAGS if unset.
	Reported by Olivier Louchart-Fletcher <olivier@zipworld.com>.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in (&create): Reinstall.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in (&append_exeext): Use macro_delete.

2001-10-30  Akim Demaille  <akim@epita.fr>

	* automake.in ($verbose): Remove, inherited from
	Automake::General.
	(&variable_delete): Rename as...
	(&macro_delete): this, for consistency.
	(&variable_assert): New.
	(&variable_value_as_list, &variable_value_as_list_recursive_worker):
	Use it.

2001-10-29  Akim Demaille  <akim@epita.fr>

	* m4/lispdir.m4 (AM_PATH_LISPDIR): Use AC_RUN_LOG to avoid
	cluttering configure's stdout.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in: Various formatting changes.
	(create): Remove, unused.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (&append_exeext): New.
	(&am_primary_prefixes): Use it.

2001-10-28  Akim Demaille  <akim@epita.fr>

	* automake.in (am_primary_prefixes): Now, in accordance with its
	comment, return the list of prefixes actually used, not all the
	possible prefixes for a primary.
	(&handle_libraries, &handle_ltlibraries, &handle_java)
	(&am_install_var): Adjust.
	* Makefile.am (maintainer-check): Allow `local $_;'.

2001-10-28  Akim Demaille  <akim@epita.fr>
