@@ -34,6 +34,7 @@ David A. Swierczek	swiercze@mr.med.ge.com
 David Zaroski		cz253@cleveland.Freenet.Edu
 Derek R. Price		derek.price@openavenue.com
 Dieter Baron		dillo@stieltjes.smc.univie.ac.at
+Dmitry Mikhin		dmitrym@acres.com.au
 Doug Evans		devans@cygnus.com
 Eleftherios Gkioulekas	lf@amath.washington.edu
 Elrond			Elrond@Wunder-Nett.org
