@@ -1892,8 +1892,10 @@ sub handle_single_transform_list ($$$$@)
             }
         }
 
-	# Let the language do some special magic if required.
-	$lang->target_hook ($aggregate, $object, $full);
+	if (defined $lang) {
+	    # Let the language do some special magic if required.
+	    $lang->target_hook ($aggregate, $object, $full);
+	}
 
 	if ($derived_source)
 	{
