@@ -288,6 +288,7 @@ substtarg.test \
 suffix.test \
 suffix2.test \
 suffix3.test \
+suffix4.test \
 symlink.test \
 symlink2.test \
 symlink3.test \
