@@ -1,3 +1,11 @@
+2001-11-01  Alexandre Duret-Lutz  <duret_g@epita.fr>
+
+	* automake.in (handle_single_transform_list): Don't call
+	$lang->target_hook for undefinied langages.
+	* tests/suffix4.test: New test.
+	* tests/Makefile.am (TESTS): Add suffix4.test.
+	Reported by Dmitry Mikhin <dmitrym@acres.com.au>.
+
 2001-11-05  Akim Demaille  <akim@epita.fr>
 
 	* automake.in (@common_sometimes, &handle_configure): No longer
@@ -20,7 +28,7 @@
 2001-10-31  Alexandre Duret-Lutz  <duret_g@epita.fr>
 
 	* m4/gcj.m4 (AM_PROG_GCJ): Define GCJFLAGS if unset.
-	Reported by Olivier Louchart-Fletcher <olivier@zipworld.com>.
+	Reported by Olivier Louchart-Fletcher <olivier@zipworld.com.au>.
 
 2001-10-30  Akim Demaille  <akim@epita.fr>
 
